1. 新增影视子菜单

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
+    "movies": "node -r dotenv/config ./scripts/movies.js",
     "prettier": "prettier --write --ignore-unknown .",
     "prettier:check": "prettier --check --ignore-unknown .",
     "seed": "node -r dotenv/config ./scripts/seed.js",
@@ -27,6 +28,7 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/bcrypt": "^5.0.1",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.14",
